--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.46",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.20",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1",
-    "expo-dev-client": "~5.0.20",
-    "react-native-svg": "^12.1.1",
+    "expo": "^53.0.9",
+    "expo-dev-client": "~5.1.8",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-svg-charts": "^5.4.0",
-    "@react-native-community/slider": "4.4.2"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0"
   },
   "private": true
 }
