--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "npx expo export --platform web",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
@@ -35,6 +37,7 @@
     "@babel/preset-env": "^7.27.2",
     "@testing-library/react-native": "^13.2.0",
     "babel-jest": "^30.0.0-beta.3",
+    "gh-pages": "^6.3.0",
     "jest": "^30.0.0-beta.3",
     "jest-expo": "^53.0.5",
     "react-test-renderer": "^19.0.0"
