--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "luaraujo-livro-app",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://lucasdoreac.github.io/expo-app",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest",
-    "predeploy": "npx expo export --platform web",
+    "predeploy": "npx expo export --platform web && node fix-ghpages-paths.js",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
