--- a/app.json
+++ b/app.json
@@ -22,7 +22,11 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/favicon.png",
+      "publicPath": "/expo-app/"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ]
   }
 }
