--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,18 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# Dependencies
-node_modules/
-
 # Expo
 .expo/
-dist/
-web-build/
-expo-env.d.ts
+android/
+ios/
 
-# Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# Debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# Local env files
-.env*.local
-.env
-.env.development
-.env.production
-
-# TypeScript
-*.tsbuildinfo
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# Node modules
+node_modules/
 
 # Logs
-logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# Distribution / packaging
-build/
-*.tgz
+# Sistema
+.DS_Store
 
-# Testing
-coverage/
-
-# Temporary files
-tmp/
-temp/
+# Ambiente
+.env
