--- a/package.json
+++ b/package.json
@@ -14,21 +14,27 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/slider": "4.5.6",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^53.0.9",
-    "expo-dev-client": "~5.1.8",
+    "expo-build-properties": "^0.14.6",
+    "expo-clipboard": "^7.1.4",
+    "expo-notifications": "^0.31.2",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
-    "react-native-svg-charts": "^5.4.0",
-    "react-native-web": "^0.20.0"
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
